Bug 1249913 - True overflow containers shouldn't have borders or background.  r=dholbert